added Multidoku solve Using Rules